# free-my-hands

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: workflows.md
feishu/: event_callbacks.json  permissions.json
scripts/: make_share_archive.sh  start_fmh_tmux.sh
src/fmh/: __init__.py  app.py  approval.py  cli.py  codex_auditor.py  config.py  deployed_doc.py  feishu.py  health.py  models.py  operator_review.py  orchestrator.py  parser.py  poller.py  reusable_executor.py  reusable_workers.py  runner.py  store.py  task_status.py  time_utils.py  weight_conversion.py
tests/: test_app.py  test_codex_auditor.py  test_feishu.py  test_operator_review.py  test_orchestrator.py  test_parser.py  test_poller.py  test_reusable_executor.py  test_reusable_workers.py  test_store.py  test_task_status.py  test_weight_conversion.py
